Added colour scheme

--- a/client/src/variables.less
+++ b/client/src/variables.less
@@ -1,6 +1,11 @@
 
 // Core colour scheme
-@colour-main: #003C71;
+@colour-main-primary: #06A8E4;
+@colour-main-secondary: #FF0099;
+@colour-main-third: #003554;
+@colour-main-fourth: #011627;
+@colour-main-fifth: #FF3366;
+
 @colour-black: #0e141e;
 @colour-dark: #39424e;
 @colour-grey: #576871;
