--- a/client/src/index.less
+++ b/client/src/index.less
@@ -1,3 +1,5 @@
+@import "./variables.less"; 
+
 body {
     box-sizing: border-box;
     margin: 0px;
@@ -6,13 +8,16 @@ body {
     font: caption; // Uses the system defined font
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
+
+    // background-color: @colour-black;
+    // color: @colour-light;
 }
 
 #root {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
     padding: 0px;
     margin: 0px;
 }
