First section of frontend completed

--- a/client/src/components/Entry/InfoEntry.less
+++ b/client/src/components/Entry/InfoEntry.less
@@ -23,5 +23,13 @@
 
             border-left: solid 1px black;
         }
+
+        .InfoSearchedBooks {
+            padding: 2rem;
+
+            border-left: solid 1px black;
+
+            
+        }
     }
 }
