Finished first front end componet

--- a/client/src/components/Entry/LoadingScreen.less
+++ b/client/src/components/Entry/LoadingScreen.less
@@ -1,4 +1,14 @@
 .LoadingScreenPage {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
+    .LoadingContainer {
+
+    }
 }
