--- a/client/src/components/Entry/BookListing.less
+++ b/client/src/components/Entry/BookListing.less
@@ -5,6 +5,9 @@
     height: 4rem;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
+    color: black;
+
+    text-decoration: none;
 
     &:hover {
         background-color: darken(white, 10%);
