--- a/client/src/components/Entry/LoadingScreen.less
+++ b/client/src/components/Entry/LoadingScreen.less
@@ -1,14 +1,25 @@
+@import "./../../variables.less";
+
 .LoadingScreenPage {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    background-color: @bg-main;
 
     .LoadingContainer {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100vw;
+        height: 100vh;
 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .LoadingContent {
+            color: @text-main;
+        }
     }
 }
