--- a/client/src/components/Entry/BookListing.less
+++ b/client/src/components/Entry/BookListing.less
@@ -1,3 +1,8 @@
+@import "./../../variables.less";
+
+@max-width: 400px;
+@img-container: 100px;
+
 .BookListing {
 
     display: flex;
@@ -5,35 +10,50 @@
     height: 4rem;
     padding: 0.5rem;
     margin-bottom: 0.5rem;
-    color: black;
+    margin-right: 0.5rem;
+    color: @text-main;
+    width: @max-width;
 
     text-decoration: none;
 
     &:hover {
-        background-color: darken(white, 10%);
+        background-color: darken(white, 30%);
     }
 
     .TextHolder {
 
         display: flex;
         align-items: center;
+        width: @max-width - @img-container;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         .Title {
             font-weight: bolder;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     
         .Author {
-            
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .Relevance {
-            color: gray;
+            color: darken(@text-main,20%);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
 
     .ImgHolder {
 
-        width: 5rem;
+        width: @img-container;
         display: block;
 
         .Image {
