Restructured site to use particles on all pages, allowed quick loading

--- a/client/src/components/Entry/LoadingScreen.less
+++ b/client/src/components/Entry/LoadingScreen.less
@@ -5,7 +5,11 @@
     height: 100vh;
     overflow: hidden;
 
-    background-color: @bg-main;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    // background-color: @bg-main;
 
     .LoadingContainer {
         position: absolute;
@@ -20,6 +24,21 @@
 
         .LoadingContent {
             color: @text-main;
+
+            .LoadingBackBtn {
+                position: absolute;
+                bottom: 1rem;
+                right: 1rem;
+                color: @text-main;
+                text-decoration: none;
+                background-color: @colour-main-secondary;
+                padding: 1rem;
+                border-radius: @size-radius;
+
+                &:hover {
+                    background-color: @colour-main-primary;
+                }
+            }
         }
     }
 }
