--- a/client/src/index.less
+++ b/client/src/index.less
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     // overflow: hidden;
 
-    // background-color: @colour-black;
+    background-color: @bg-main;
     // color: @colour-light;
 }
 
