--- a/client/src/variables.less
+++ b/client/src/variables.less
@@ -13,6 +13,6 @@
 @colour-white: #FFFFFF;
 
 @text-main: @colour-white;
-@bg-main: @colour-black;
+@bg-main: @colour-main-fourth;
 
 @size-radius: 3px;
