--- a/client/src/components/Entry.less
+++ b/client/src/components/Entry.less
@@ -1,5 +1,9 @@
+@import "./../variables.less";
+
 .EntryPage {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+
+    background-color: @bg-main;
 }
