--- a/client/src/components/Entry/InfoEntry.less
+++ b/client/src/components/Entry/InfoEntry.less
@@ -1,13 +1,16 @@
 @import "./../../variables.less";
 
 .InfoEntryPage {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
     overflow-y: auto;
     box-sizing: border-box;
 
-    background-color: @bg-main;
     color: @text-main;
 
     padding-left: 10rem;
@@ -35,7 +38,7 @@
             }
 
             span {
-                text-align: right;
+                float: right;
             }
         }
 
@@ -48,7 +51,7 @@
                 color: @text-main;
                 background-color: @bg-main;
                 border: none;
-                border-bottom: 1px solid @colour-main-secondary;
+                border-bottom: 1px solid @colour-main-primary;
                 padding: 0.5rem;
                 font-size: 2rem;
 
@@ -61,16 +64,16 @@
                 display: inline-block;
                 color: @text-main;
                 text-decoration: none;
-                margin: 1rem;
+                margin: 1rem 0rem;
                 padding: 1rem;
                 border-radius: @size-radius;
-                background-color: @colour-main-secondary;
-                border: 1px solid @colour-main-secondary;
+                background-color: @colour-main-primary;
+                border: 1px solid @colour-main-primary;
 
                 &:hover {
                     
-                background-color: @colour-main-primary;
-                border: 1px solid @colour-main-primary;
+                background-color: @colour-main-fifth;
+                border: 1px solid @colour-main-fifth;
                 }
             }
         }
