--- a/client/src/components/Entry.less
+++ b/client/src/components/Entry.less
@@ -5,5 +5,11 @@
     width: 100vw;
     overflow: hidden;
 
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    // z-index: -1000;
+
     background-color: @bg-main;
 }
