--- a/client/src/components/Result.less
+++ b/client/src/components/Result.less
@@ -4,5 +4,11 @@
     width: 100vw;
     height: 100vh;
 
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    // z-index: -1000;
+
     background-color: @colour-light;
 }
