--- a/client/src/components/Entry/LoadingScreen.less
+++ b/client/src/components/Entry/LoadingScreen.less
@@ -39,6 +39,27 @@
                     background-color: @colour-main-primary;
                 }
             }
+
+            .LoadingBar {
+                width: 100%;
+                border: 1px solid @bg-main;
+                box-sizing: border-box;
+
+                .Bar {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    background-color: @colour-main-primary;
+                    box-sizing: border-box;
+                    padding: 0.5rem;
+
+                    span {
+                        padding: 0px;
+                        margin: 0px;
+                    }
+                }
+            }
         }
     }
 }
